--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
+    "mongoose": "^8.1.3",
     "nodemon": "^3.0.1"
   },
   "devDependencies": {
